--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - echo Build started on `date`
   post_build:
     commands:
-      - aws s3 cp --recursive --acl public-read ./html s3://connors.test.bucket/
+      - aws s3 cp --recursive ./html s3://connors.test.bucket/
 artifacts:
   type: zip
   files:
